Opened 6 years ago
Closed 6 years ago
#10374 closed bug (fixed)
[add-ons/index_server/fulltext] CLuceneDataBase.cpp: Mismatching allocation and deallocation
Reported by: | mt | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Add-Ons | Version: | R1/Development |
Keywords: | index_server | Cc: | |
Blocked By: | Blocking: | ||
Has a Patch: | yes | Platform: | All |
Description
In CLuceneWriteDataBase::_RemoveDocuments() and CLuceneWriteDataBase::_IndexDocument(), variable wPath is allocated by new[] (via to_wchar()), but deallocated by delete.
Attachments (1)
Change History (3)
by , 6 years ago
Attachment: | 0003-Fix-mismatching-allocation-and-deallocation.patch added |
---|
comment:1 by , 6 years ago
Has a Patch: | set |
---|
Note:
See TracTickets
for help on using tickets.
Patch